Fri Oct 31 15:57:21 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Increase task's storage size up to 3_000_000
	  bytes.

	* s-garuti.ads: Move To_Stream_Element_Array and
	  To_Params_Stream_Type into System.Garlic.Streams.

	* s-garuti.adb: Idem.

	* s-garter.adb: Remove pragma Storage_Size on task.

	* s-gartcp.adb: Use dynamic allocation of streams.

	* s-garrep.adb: Remove pragma Storage_Size on task.

	* s-garhea.adb: Use dynamic allocation of streams.

	* s-garfil.ads, s-garfil.adb, s-gafizi.ads, s-gafizi.adb,
	  s-gafino.ads, s-gafino.adb: Use dynamic allocation of streams.

	* Makefile.am: Update dependencies. Add System.Garlic.Streams and
	  System.Garlic.Storage_Handling.

Wed Oct 29 19:59:40 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb, s-garuti.ads: Add new function Different to test
	if two version ids are different. If one of the two version ids is
	a string of blank characters, then the two version ids are identical.

Wed Oct 29 19:27:31 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Set System.Standard_Library.Local_Partition_ID.

	* s-ganobl.adb: Add warnings.

Fri Oct 17 18:27:45 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* s-garela.ads, s-garela.adb: Add procedure Initialize to remove
 	elaboration code.

	* s-garsta.adb: Invoke Elaboration.Initialize after
 	Options.Initialize.

	* s-garthi.ads: Add some procedures and types for IPC messages.

Thu Oct 16 12:50:35 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.adb: Refine termination algorithm by using
	System.Tasking.Utilities.

Wed Oct 15 13:39:22 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garser.adb.in: Update caused by previous changes.

	* Makefile.in, Makefile.am: Update dependencies.
	
Sat Oct 11 12:31:05 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* s-gartra.adb, s-gartra.ads: Change some procedure names.  Open
 	trace file in trace mode in Initialize. Close trace file in