@@ -1,3 +1,9 @@
+Thu Dec  4 16:48:31 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-parint.ads: Remove GNAT 3.09 bug workaround.
+
+	* s-parint.adb: Typos.
+
 Fri Oct 31 15:57:21 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-rpcpoo.adb: Increase task's storage size up to 3_000_000
